# Learning_Notes

./: README.md  linux_basic_cmd.md
CPP/inside_cpp_obj/no_vptr_derive/: main.cxx  test
CPP/inside_cpp_obj/vptr_offset/: main.cxx  vptr_offset
PcapRead/: CMakeLists.txt  ProtoHeader.h  RadiusInfo.cpp  RadiusInfo.h  RadiusSaver.h  lt_debug.cpp  lt_debug.h  lt_net.cpp  lt_net.h  main.cpp  pktHandler.cpp  pktHandler.h
PcapRead/PcapFile/: 2.pcap  CapturedStream.pcap  FixOneH.pcap  hyc.pcap
STL/associate_container/: testUmap.cxx
bookReading/linux_cmd_shell/cmd/: alias.sh  basename.sh  bash.sh  cat.sh  coproc.sh  cp.sh  df.sh  du.sh  echo.sh  env.sh  file.sh  finger.sh  grep.sh  head.sh  history.sh  kill.sh  less.sh  ln.sh  ls.sh  lsblk.sh  mkdir.sh  mount.sh  mv.sh  ps.sh  readlink.sh  rm.sh  rmdir.sh  runlevel.sh  set.sh  sh.sh  sort.sh  source.sh  strace.sh  tail.sh  tar.sh  touch.sh  type.sh  umount.sh  useradd.sh  usermod.sh
bookReading/linux_cmd_shell/scripts/: back_process_list.sh  bash_arr.sh  bash_loop.sh  checksys.sh  cmd_arg.sh  create_many_acct.sh  date_diff.sh  disk_manage.sh  echo.txt  echo_today.sh  file_restrict.sh  find_excute_file.sh  first_bash.sh  get_all_params.sh  if_else_bash.sh  last_params.sh  linux_accout.sh  math_cal.sh  pkg_manage.sh  pkg_mng_check.sh  process_list.sh  process_pass_file.sh  redirect.sh  set_variables.sh  shift_params.sh  sort_apt.sh  state.txt  test_bash.sh  use_vim.sh
buildTools/GDBTools/: UsingGDB
buildTools/GDBTools/coredumpDebug/: README.md  seg.c
buildTools/MakeTools/: Makefile  hello.c  myMath.c  myMath.h  usingMake.md  world.c
data_struct/: heap_arr.h  queue_arr.h  queue_link.h  stack_arr.h  stack_link.h
leet_code/: fresh.sh  lc274.cpp  lc283.cpp  lc3.cpp  lc41.cpp  lc448.cpp  lc453.cpp  lc645.cpp  lc665.cpp  lc697.cpp  mkdir.sh
leet_code/lc1-100/: lc1.cpp  lc12.cpp  lc15.cpp  lc33.cpp  lc34.cpp  lc54.cpp  lc59.cpp
leet_code/lc101-200/: lc122.cpp  lc123.cpp  lc167.cpp  lc190.cpp  lc191.cpp  lc198.cpp  lc199.cpp  lc200.cpp
leet_code/lc201-300/: lc205.cpp  lc278.cpp
leet_code/lc2401-2500/: lc2500.cpp
leet_code/lc401-500/: lc413.cpp  lc414.cpp  lc485.cpp  lc495.cpp
leet_code/lc601-700/: lc628.cpp
net/dpdk/basicfwd/: CMakeLists.txt  main.cpp
serverProgramming/codeSnippet/: isPrime.c  isPrime.h  primeRpcClient.h  rpcClient.c  rpcServer.c
serverProgramming/codeSnippet/echoServer/datagramServer/: Makefile  client.c  server.c
serverProgramming/codeSnippet/echoServer/pollServer/: Makefile  myfifo  server.c  usingPoll.c  usingPollSimple.c
serverProgramming/codeSnippet/echoServer/selectServer/: Makefile  client.c  server.c  usingSelect.c
serverProgramming/codeSnippet/echoServer/streamServer/: Makefile  client.c  server.c
serverProgramming/codeSnippet/primeRpc/: primeRpcClient.c
serverProgramming/codeSnippet/usingGet/: showip  showip.c  testGetAddr.c  testSocket.c
serverProgramming/simpleRpc/: CMakeLists.txt  LayoutAndIssues  main.cpp
serverProgramming/simpleRpc/src/: callWrapper.cpp  callWrapper.h  isPrime.cpp  isPrime.h  rpcParam.cpp  rpcParam.h  rpcParamType.cpp  rpcParamType.h  rpcRequest.h  rpcResponse.h  rpcServer.h
shell_all/: ans_yn.sh  ans_yn_2.sh  ans_yn_3.sh  cal_pi.sh  cal_retired.sh  create_3_filename.sh  file_perm.sh  hello_2.sh  history_log.sh  how_paras.sh  io_redirect.sh  multiplying.sh  netstat.sh  read_sh.sh  test.sh  using_and_or.sh
shell_all/shPro/: arr_use.sh  cut_file.txt  declare_use.sh  grep_using.sh  hello_world.sh  history_cmd.txt  regular_express.txt  shift_param.sh  showname.sh  using_sed.sh  var_del.sh  var_test.sh
shell_all/some_sh/: cal_words_stat.sh  file.txt  get_col.sh  get_row.sh  reg_use.sh  rev_file.sh  rev_file_awk.sh
simpleRpc/: CMakeLists.txt  main.cpp
simpleRpc/src/: rpcClient.cpp  rpcClient.h  rpcRequest.cpp  rpcRequest.h  rpcResponse.cpp  rpcResponse.h  rpcServer.cpp
toyUtils/PcapRead/: RadiusInfo.h  RadiusSaver.cpp  lt_debug.h  main.cpp  pktHandler.cpp
toyUtils/PcapRead/PcapFile/: 1.pcap
toyUtils/net/: Makefile  README.md  ipUtils.c  ipUtils.h  test.c  testData.txt
toyUtils/tinyGame/greadySnake/: Makefile  main.c  snake
unixProgramming/InterProcessComm/: pipe.c  test.c
unixProgramming/Process/: Makefile  usingWait.c
unixProgramming/StrFunc/: Makefile  useGetOpt.c  useGetOptLong.c  useMemchr.c  useStrdup.c
unixProgramming/Thread/: Makefile  pthread_create.c  pthread_simple.c
(+3 files in other folders)
